# Algorithms-Code-2023

./: .gitignore  README.md
C/Functoins/: variable_arguments.c
C/List/: list.c  list.h  stack.h  use_list.c
C/Pointers/: 2d_arrays.c  pointer++.c  pointers.c
C/Strings/: stringh.c  strings.c  task6.c
C/Structs and Files/: serialized
C/Tree/: list.h  tree.c  tree.h
Cpp/: CMakeLists.txt  README.md
Cpp/CMake example/include/: Hello.h
Cpp/CMake example/src/: Hello.cpp
Cpp/CMake example/test/: HelloTest.cpp
Cpp/CPU Emulator/: CMakeLists.txt
Cpp/CPU Emulator/dynamic polymorphism/: interface.cpp  parser.cpp  preprocessor.cpp
Cpp/CPU Emulator/exceptions/: custom_exception.cpp  try_catch.cpp
Cpp/CPU Emulator/smart pointers/: pointers.cpp  shared_pointer.cpp  smart_pointer.cpp  std_pointers.cpp
Cpp/Classes/: CMakeLists.txt
Cpp/Classes/basics/: operators.cpp  references.cpp  rule_of_five.cpp
Cpp/Classes/containers/: algorithms.cpp  deque.cpp
Cpp/Classes/src/: classes.cpp  enum.cpp  new_delete.cpp  operators.cpp  references.cpp  struct.cpp
Cpp/Cmake template/: CMakeLists.txt
Cpp/Cmake template/include/: Hello.hpp
Cpp/Cmake template/src/: Hello.cpp
Cpp/Containers/: CMakeLists.txt
Cpp/Containers/src/: iterators.cpp
Cpp/Containers/src/associative/: map.cpp  unordered_map.cpp
Cpp/Containers/src/associative/multi/: multimap.cpp  multiset.cpp  unordered_multimap.cpp
Cpp/Inheritance/: CMakeLists.txt  inheritance.cpp  lambda.cpp  virtual.cpp
Cpp/Inheritance/casts/: const_cast.cpp  dynamic_cast.cpp  reinterpret_cast.cpp  static_cast.cpp
Cpp/Inheritance/game/: abilities.cpp  character.cpp  game.cpp  menu.cpp  stats.cpp  weapons.cpp
Cpp/Intro/: Calculator.cpp  Calculator.h  FirstCppApp.cpp
Cpp/Project/: CMakeLists.txt
Cpp/Project/src/: interface.cpp  tagged_union.cpp  variant.cpp
Cpp/Templates/: CMakeLists.txt
Cpp/Templates/src/: all_types.cpp  all_types_class.cpp  template_compile_time.cpp
DynamicMemoryAlocation/: allocation.c  memory_leak.c
Expressions/: expressions.c  input_output.c
Linux setup/: README.md
List/: list.c  queue.c  queue.h  use_list.c
Make/: readme.md
Make/Advanced/: Makefile
Make/Elf edition/: Makefile  f.asm  f.c  goodboy.c
Make/Simple/: Makefile  sub.c  sub.h
Make/Trivial/: Makefile
NASM/: macro.c  some  some.asm
NASM/01-Basics/: hello_world.asm  segments.asm
NASM/02-Arithmetics/: add.asm  (+1 more)
Pointers/: 2d_arrays.c  arrays.c  pointer++.c
Strings/: prefix.docx  prefix_functoin.c  stringh.c  strings.c  tasks.txt
Structs and Files/: files.c  serialization.c  struct.c
Tree/: list.c  list.h  tree.h
(+20 files in other folders)
